# docs/swagger.yaml
@@ -7,6 +7,8 @@ definitions:
     type: object
   entities.UserResp:
     properties:
+      country:
+        type: string
       created_at:
         type: string
       email:
@@ -46,6 +48,45 @@ paths:
           schema:
             $ref: '#/definitions/entities.ErrResp'
       summary: health check
+  /users:
+    get:
+      description: list user details
+      operationId: list-user
+      parameters:
+      - description: Country
+        in: query
+        name: country
+        type: string
+      - description: Page size
+        in: query
+        name: page-size
+        type: string
+      - description: Page number
+        in: query
+        name: page-number
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User detail list
+          schema:
+            items:
+              $ref: '#/definitions/entities.UserResp'
+            type: array
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/entities.ErrResp'
+        "424":
+          description: Database Error
+          schema:
+            $ref: '#/definitions/entities.ErrResp'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/entities.ErrResp'
+      summary: list users
   /users/{user-id}:
     get:
       description: gets user details
