# internal/handlers/httphandler/routes.go
@@ -9,7 +9,7 @@ func (h HTTPHandler) bindRoutes() {
 	h.e.GET("/swagger/*any", echoSwagger.WrapHandler)
 	h.e.GET("/health", h.HealthHandler)
 	h.e.GET("/users/:user-id", h.GetUserHandler)
-	// h.e.GET("/users", h.ListUserHandler)
+	h.e.GET("/users", h.ListUserHandler)
 	// h.e.PUT("/users", h.CreateUserHandler)
 	// h.e.POST("/users/:user-id", h.UpdateUserHandler)
 	// h.e.DELETE("/users/:user-id", h.DeleteUserHandler)
